fix(site): Overflow du body a cause de la loupe

--- a/css/info.css
+++ b/css/info.css
@@ -1,3 +1,7 @@
+body, html {
+    overflow: hidden;
+}
+
 body {
     background: var(--primary-color);
     background-size: cover;
